Query vector data
